# projeto-microcontroladores

./: CMakeLists.txt  README.md
include/: 8Bitdo_payload.h  bluetooth_controller.h  btstack_config.h  lwipopts.h  motor.h  movement.h  robotConfig.h
src/: bluetooth_controller.c  main.c  motor.c
